--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "popper.js": "^1.14.3",
     "rxjs": "^6.0.0",
     "typescript": "~2.7.2",
+    "typings": "^2.1.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -49,8 +50,10 @@
     "@angular/cli": "~6.0.8",
     "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
+    "@types/bootstrap": "^4.1.2",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.3.4",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "enhanced-resolve": "^4.1.0",
