--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/router": "^6.0.3",
     "@ng-bootstrap/ng-bootstrap": "^2.2.0",
     "bootstrap": "^4.1.1",
+    "bootstrap-toggle": "^2.2.2",
     "core-js": "^2.5.4",
     "draggable": "^4.2.0",
     "express": "^4.16.3",
