--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "express": "^4.16.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "jquery-ui": "^1.12.1",
+    "jquery-ui-dist": "^1.12.1",
     "ng-multiselect-dropdown": "^0.1.9",
     "ng-simple-slideshow": "^1.2.2",
     "path": "^0.12.7",
