--- a/package.json
+++ b/package.json
@@ -41,9 +41,12 @@
     "jquery-ui-dist": "^1.12.1",
     "ng-multiselect-dropdown": "^0.1.9",
     "ng-simple-slideshow": "^1.2.2",
+    "ngx-slick": "^0.2.1",
+    "ngx-slick-carousel": "^0.4.0",
     "path": "^0.12.7",
     "popper.js": "^1.14.3",
     "rxjs": "^6.0.0",
+    "slick-carousel": "^1.8.1",
     "typescript": "~2.7.2",
     "typings": "^2.1.1",
     "zone.js": "^0.8.26"
@@ -56,7 +59,7 @@
     "@types/bootstrap": "^4.1.2",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
-    "@types/jquery": "^3.3.4",
+    "@types/jquery": "^3.3.5",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "enhanced-resolve": "^4.1.0",
@@ -67,7 +70,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.3.0",
+    "protractor": "^5.4.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
     "typescript": "~2.7.2"
