--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "@ng-bootstrap/ng-bootstrap": "^2.2.0",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.1.1",
     "bootstrap-toggle": "^2.2.2",
     "core-js": "^2.5.4",
